# a2a-cpp

./: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  README.md  SECURITY.md  SUPPORT.md  conanfile.py  vcpkg.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-packages.yml
cmake/: a2a_cppConfig.cmake.in
docs/: auth-hooks.md  build.md  client-usage.md  interceptors.md  packaging.md  parity-a2a-go.md  quickstart.md  sdk-readiness.md  server-usage.md  streaming-usage.md
docs/codex-mvp-tasks/: 00-backlog-overview.md  01-repo-bootstrap-and-codegen.md  02-core-versioning-errors-protojson.md  03-agent-card-discovery.md  04-http-json-client-core-rpcs.md  05-sse-streaming-client.md  06-json-rpc-client.md  07-server-core-executor-dispatcher-task-store.md  08-rest-server-transport.md  09-json-rpc-server-transport.md  10-auth-security-hooks.md  11-examples-interop-and-ci.md  12-parity-gap-analysis-vs-a2a-go.md  13-grpc-transport-parity.md  14-client-server-api-parity-extended-rpcs-and-interceptors.md  15-test-coverage-and-quality-gates.md  16-examples-expansion-and-local-runner-guide.md  17-google-sdk-readiness-checklist.md  README.md
examples/: CMakeLists.txt  README.md  auth_policy_server.cpp  cancel_task_client.cpp  discovery_only_client.cpp  example_support.h  grpc_client.cpp  interceptor_client.cpp  json_rpc_client.cpp  list_tasks_client.cpp  minimal_server_custom_executor.cpp  push_notification_config_client.cpp  rest_client.cpp  streaming_client.cpp
include/a2a/client/: auth.h  call_options.h  client.h  discovery.h  grpc_transport.h  http_json_transport.h  json_rpc_transport.h  sse_parser.h
include/a2a/core/: core.h  error.h  extensions.h  json_rpc.h  protojson.h  result.h  version.h
include/a2a/server/: grpc_server_transport.h  json_rpc_server_transport.h  rest_adapter.h  rest_server_transport.h  rest_transport.h  server.h
proto/: CMakeLists.txt
proto/a2a/v1/: a2a.proto
scripts/: install_build_deps.sh  run_clang_tidy.sh  run_coverage.sh  run_examples.sh  verify_changes.sh
src/: CMakeLists.txt
src/client/: auth.cpp  client.cpp  discovery.cpp  grpc_transport.cpp  http_json_transport.cpp  json_rpc_transport.cpp  sse_parser.cpp
src/core/: core.cpp  error.cc  error.cpp  extensions.cc  extensions.cpp  protojson.cc  protojson.cpp  version.cc  version.cpp
src/server/: grpc_server_transport.cpp  json_rpc_server_transport.cpp  rest_adapter.cpp  rest_server_transport.cpp  rest_transport.cpp  server.cpp
tests/: CMakeLists.txt  generated_proto_smoke_test.cpp
tests/fixtures/: agent_card_valid.json
tests/fixtures/protojson/: send_message_request_golden.json  stream_response_golden.json  task_golden.json
tests/functional/: examples_functional_test.cpp  grpc_client_functional_test.cpp  json_rpc_client_functional_test.cpp  json_rpc_server_transport_functional_test.cpp  rest_server_transport_functional_test.cpp  server_task_store_functional_test.cpp
tests/integration/: examples_interop_integration_test.cpp  grpc_transport_integration_test.cpp  http_json_client_integration_test.cpp  http_json_streaming_integration_test.cpp  json_rpc_client_integration_test.cpp  json_rpc_server_transport_integration_test.cpp  rest_server_transport_integration_test.cpp  server_dispatcher_task_store_integration_test.cpp
tests/support/: rest_server_test_utils.h
tests/unit/: client_test.cpp  core_helpers_test.cpp  core_protojson_golden_test.cpp  discovery_test.cpp  examples_support_test.cpp  grpc_server_transport_test.cpp  grpc_transport_test.cpp  json_rpc_server_transport_test.cpp  json_rpc_transport_test.cpp  rest_adapter_test.cpp  rest_server_transport_test.cpp  rest_transport_test.cpp  server_dispatcher_test.cpp  sse_parser_test.cpp
